# venturebot

./: .dockerignore  .gitignore  CLAUDE.md  README.md  compose.yml  pyproject.toml
.github/workflows/: build-and-push.yml  ci.yml
archive/: session_summary_phase0_complete.md
assets/seed/: Horseshoe Mountain via Boudoir Couloir.md  Mount Blue Sky via Crystal Couloir.md  Pettingell to Citadel Traverse.md  Sayres Benchmark via X-Rated Couloir.md  citadel_pettingell.md  quandary_peak.md
assets/sources/: peaks.yaml  roads.yaml  routes.yaml  trailheads.yaml
assets/templates/: README.md  schema.yaml  trip_plan_template.md  trip_planning_process.md
assets/templates/examples/: citadel_pettingell_traverse_reformatted.md  index.md  mount_yale_east_ridge_winter_EVENT_2026-01-17.md  mount_yale_east_ridge_winter_META.md  quandary_peak_winter_reformatted.md
docs/: project_overview.md
src/portal/: Dockerfile  client.py  main.py
src/server/: Dockerfile  agent.py  main.py  models.py  renderer.py  routes.py  schemas.py  settings.py
src/server/templates/: trip_plan.md.j2
